language great progress 13%

--- a/languages/lang-2.xml
+++ b/languages/lang-2.xml
@@ -5,17 +5,17 @@
   </index>
 
   <topbar>
-    <sign_in>Iniciar Sesi&oacute;n</sign_in>
+    <sign_in>Iniciar Sesion</sign_in>
     <or>o</or>
-    <sign_out>Cerrar Sesi&oacute;n</sign_out>
+    <sign_out>Cerrar Sesion</sign_out>
     <welcome>Bienvenido </welcome>
     <user_panel>Panel del Usuario</user_panel>
-    <sign_up>Crear Sesi&oacute;n</sign_up>
+    <sign_up>Crear Sesion</sign_up>
   </topbar>
 
   <guide>
-    <search_box>B&uacute;squeda R&aacute;pida</search_box>
-    <search_advice>Presione enter para una b&uacute;squeda completa</search_advice>
+    <search_box>Busqueda Rapida</search_box>
+    <search_advice>Presione enter para una busqueda completa</search_advice>
   </guide>
 
   <cart_merge>
@@ -33,7 +33,7 @@
   </cart_merge>
 
   <sidebar>
-    <categories>Categor&iacute;as</categories>
+    <categories>Categorias</categories>
   </sidebar>
 
   <header>
@@ -42,16 +42,16 @@
     <descending>Descendente</descending>
     <register>Crear un nuevo usuario</register>
     <my_cart>Mi Carrito</my_cart>
-    <create_address>Crear una nueva Direcci&oacute;n</create_address>
+    <create_address>Crear una nueva Direccion</create_address>
     <user_panel>Panel del Usuario</user_panel>
   </header>
 
   <reg_labels>
     <username>Nombre de Usuario:</username>
     <name>Nombre:</name>
-    <password>Contrase&ntilde;a:</password>
-    <re_password>Re-escriba la contrase&ntilde;a:</re_password>
-    <email>Correo electr&oacute;nico:</email>
+    <password>Contrasena:</password>
+    <re_password>Re-escriba la contrasena:</re_password>
+    <email>Correo electronico:</email>
     <birth_date>Fecha de nacimiento:</birth_date>
     <reg_button>Registrar</reg_button>
   </reg_labels>
@@ -64,31 +64,31 @@
     <lower_case_items>productos</lower_case_items>
     <lower_case_item>producto</lower_case_item>
     <shipping_address>
-      <header>Direcci&oacute;n de entrega</header>
-      <error_part1>No hay ninguna direcci&oacute;n regitrada,</error_part1>
+      <header>Direccion de entrega</header>
+      <error_part1>No hay ninguna direccion regitrada,</error_part1>
       <error_clcick_here>presione aqui</error_clcick_here>
       <error_part2>para registrar una.</error_part2>
     </shipping_address>
-    <loggin_error>Por favor inicie sesi&oacute;n para confirmar &eacute;sta orden</loggin_error>
-    <no_item_error>Por favor agregue productos al carrito para confirmar &eacute;sta orden</no_item_error>
+    <loggin_error>Por favor inicie sesion para confirmar esta orden</loggin_error>
+    <no_item_error>Por favor agregue productos al carrito para confirmar esta orden</no_item_error>
     <checkout_button>Confirmar</checkout_button>
   </my_cart_labels>
 
    <create_address_label>
      <name>Nombre:</name>
-     <address_line_1>Direcci&oacute;n de l&iacute;nea 1:</address_line_1>
-     <address_line_2>Direcci&oacute;n de l&iacute;nea 2:</address_line_2>
-     <country>Pa&iacute;s:</country>
+     <address_line_1>Direccion de linea 1:</address_line_1>
+     <address_line_2>Direccion de linea 2:</address_line_2>
+     <country>Pais:</country>
      <state>Provincia:</state>
      <city>Ciudad:</city>
-     <zip_code>C&oacute;digo Postal:</zip_code>
-     <phone_number>N&uacute;mero Telef&oacute;nico:</phone_number>
-     <create_address_button>Crear Direcci&oacute;n</create_address_button>
+     <zip_code>Codigo Postal:</zip_code>
+     <phone_number>Numero Telefonico:</phone_number>
+     <create_address_button>Crear Direccion</create_address_button>
    </create_address_label>
 
    <product_label>
      <add_to_cart>Agregar al carrito</add_to_cart>
-     <more>m&aacute;s</more>
+     <more>mas</more>
    </product_label>
 
   <months>
@@ -107,9 +107,9 @@
   </months>
 
   <sign_in_qtip>
-    <sign_in>Iniciar Sesi&oacute;n:</sign_in>
+    <sign_in>Iniciar Sesion:</sign_in>
     <username>Nombre de Usuario</username>
-    <password>Contrase&ntilde;a</password>
+    <password>Contrasena</password>
     <log_button>Iniciar</log_button>
   </sign_in_qtip>
 
@@ -121,16 +121,60 @@
   <item>
     <welcome>Bienvenido </welcome>
     <user_panel>Panel de Usuario</user_panel>
-    <logout>Cerrar Sesi&oacute;n</logout>
+    <logout>Cerrar Sesion</logout>
   </item>
 
   <user_panel_label>
     <address_list>Lista de direcciones</address_list>
-    <create_address>Crear Direcci&oacute;n</create_address>
+    <create_address>Crear Direccion</create_address>
 
   </user_panel_label>
 
   <erros>
-    <error id='1'></error>
+    <error id='1'>La solicitud requiere de un metodo el cual no fue provisto.</error>
+    <error id='2'>La solicitud requiere de un identificador de lenguaje el cual no fue provisto.</error>
+		<error id='3'>La solicitud requiere de un identificador de pais el cual no fue provisto.</error>
+		<error id='4'>La solicitud requiere de usuario el cual no fue provisto.</error>
+		<error id='5'>La solicitud requiere la contrasena la cual no fue provista.</error>
+		<error id='6'>La solicitud requiere el token de autenticacion el cual no fue provisto.</error>
+		<error id='7'>La solicitud requiere la informacion de la cuenta de usuario la cual no fue provista.</error>
+		<error id='8'>La solicitud requiere la nueva contrasena la cual no fue provista.</error>
+		<error id='9'>La solicitud requiere de un identificador de categoria el cual no fue provisto.</error>
+		<error id='10'>La solicitud requiere de un identificador de sub-categoria el cual no fue provisto.</error>
+		<error id='11'>La solicitud requiere de un criterio de busqueda el cual no fue provisto.</error>
+		<error id='12'>La solicitud requiere de un identificador de producto el cual no fue provisto.</error>
+		<error id='13'>La solicitud requiere de un identificador de orden el cual no fue provisto.</error>
+		<error id='14'>La solicitud requiere de un identificador de direccion el cual no fue provisto.</error>
+		<error id='15'>La solicitud requiere la informacion del Item el cual no fue provisto.</error>
+		<error id='16'>La solicitud requiere la informacion de la direccion la cual no fue provista.</error>
+		<error id='17'>La solicitud requiere de un valor a almacenar que no fue provisto.</error>
+		<error id='101'>El metodo solicitado suministrado es invalido.</error>
+		<error id='102'>El identificador de lenguaje suministrado es invalido.</error>
+		<error id='103'>El identificador de pais suministrado es invalido.</error>
+		<error id='104'>El usuario es invalido.</error>
+		<error id='105'>El token de autenticacio³n es invalido.</error>
+		<error id='106'></error>
+		<error id='107'>El nombre de usuario es invÃ¡lido (longitud mÃ­nima 1 y mÃ¡xima 15 caracteres).</error>
+		<error id='108'>La contraseÃ±a es invÃ¡lida (longitud mÃ­nima 8 y mÃ¡xima 15 caracteres).</error>
+		<error id='109'>El nombre es invÃ¡lido (longitud mÃ­nima 1 y mÃ¡xima 80 caracteres).</error>
+		<error id='110'>La direcciÃ³n de email es invÃ¡lida (longitud mÃ­nima 1 y mÃ¡xima 128 caracteres).</error>
+		<error id='111'>La fecha de nacimiento es invÃ¡lida.</error>
+		<error id='112'>El identificador de categorÃ­a suministrado es invÃ¡lido.</error>
+		<error id='113'>El identificador de sub-categorÃ­a suministrado es invÃ¡lido.</error>
+		<error id='114'>El identificador de producto suministrado es invÃ¡lido.</error>
+		<error id='115'>El identificador de orden suministrado es invÃ¡lido.</error>
+		<error id='116'>La operaciÃ³n solicitada es invÃ¡lida para el estado de la orden.</error>
+		<error id='117'>El identificador de la direcciÃ³n suministrado es invÃ¡lido.</error>
+		<error id='118'>El nombre de referencia suministrado es invÃ¡lido (longitud mÃ­nima 1 y mÃ¡xima 80 caracteres).</error>
+		<error id='119'>La direcciÃ³n principal suministrada es invÃ¡lida (longitud mÃ­nima 1 y mÃ¡xima 80 caracteres).</error>
+		<error id='120'>La direcciÃ³n secundaria suministrada es invÃ¡lida (longitud mÃ­nima 1 y mÃ¡xima 80 caracteres).</error>
+		<error id='121'>El identificador de estado suministrado es invÃ¡lido.</error>
+		<error id='122'>La ciudad suministrada es invÃ¡lida (longitud mÃ­nima 1 y mÃ¡xima 80 caracteres).</error>
+		<error id='123'>El cÃ³digo postal suministrado es invÃ¡lido (longitud mÃ­nima 1 y mÃ¡xima 8 caracteres).</error>
+		<error id='124'>El nÃºmero de telÃ©fono suministrado es invÃ¡lido (longitud mÃ­nima 1 y mÃ¡xima 25 caracteres).</error>
+		<error id='125'></error>
+		<error id='201'>El nombre de usuario ya se encuentra en uso.</error>
+		<error id='202'>La direcciÃ³n ya se encuentra en uso.</error>
+		<error id='999'>Se produjo un error inesperado procesando la solicitud.</error>
   </erros>
 </locale>
