--- a/languages/lang-1.xml
+++ b/languages/lang-1.xml
@@ -66,10 +66,10 @@
     <shipping_address>
       <header>Shipping Address</header>
       <error_part1>You don't have any address registered,</error_part1>
-      <error_clcick_here>click here</error_clcick_here>
+      <error_click_here>click here</error_click_here>
       <error_part2>to register one.</error_part2>
     </shipping_address>
-    <loggin_error>Please Log in to confirm your order</loggin_error>
+    <login_error>Please Log in to confirm your order</login_error>
     <no_item_error>You need to add items to the cart to confirm your order</no_item_error>
     <checkout_button>Checkout Order</checkout_button>
   </my_cart_labels>
