--- a/languages/lang-2.xml
+++ b/languages/lang-2.xml
@@ -71,6 +71,7 @@
     </shipping_address>
     <login_error>Por favor inicie sesion para confirmar esta orden</login_error>
     <no_item_error>Por favor agregue productos al carrito para confirmar esta orden</no_item_error>
+    <no_log_address_error>No tiene ninguna direccion registrada, por favor inicie sesion para registrar una</no_log_address_error>
     <checkout_button>Confirmar</checkout_button>
   </my_cart_labels>
 
@@ -89,6 +90,8 @@
    <product_label>
      <add_to_cart>Agregar al carrito</add_to_cart>
      <more>mas</more>
+     <price>Precio:</price>
+     <amount>Cantidad:</amount>
    </product_label>
 
   <months>
@@ -129,6 +132,17 @@
     <create_address>Crear Direccion</create_address>
 
   </user_panel_label>
+
+  <product_info>
+        <sales_rank>Ranking de ventas:</sales_rank>
+        <price>Precio:</price>
+        <authors>Autores:</authors>
+        <publisher>Publicado por:</publisher>
+        <published_date>Fecha de publicacion:</published_date>
+        <isbn_10>ISBN10:</isbn_10>
+        <isbn_13>ISBN13:</isbn_13>
+        <language>Idioma:</language>
+  </product_info>
 
   <erros>
     <error id='1'>La solicitud requiere de un metodo el cual no fue provisto.</error>
