--- a/languages/lang-2.xml
+++ b/languages/lang-2.xml
@@ -14,7 +14,7 @@
   </topbar>
 
   <guide>
-    <search_box>Busqueda Rapida</search_box>
+    <search_box>Busqueda Rápida</search_box>
     <search_advice>Presione enter para una busqueda completa</search_advice>
   </guide>
 
